# src-tauri/src/models/profesional_model.rs
@@ -1,12 +1,13 @@
 use mongodb::bson::{oid::ObjectId, DateTime};
 use serde::{Serialize, Deserialize};
 
-
 #[derive(Debug, Serialize, Deserialize, Clone)]
 #[serde(rename_all = "camelCase")]
 pub struct Profesional {
     #[serde(rename = "_id", skip_serializing_if = "Option::is_none")]
     pub id: Option<ObjectId>,
+    #[serde(skip_serializing_if = "Option::is_none")]
+    pub profesional_id: Option<String>,
     pub first_name: String,
     pub last_name: String,
     pub degree: String,
