# src/apis/models/profesional-request.ts
@@ -22,6 +22,12 @@
      * @type {string}
      * @memberof ProfesionalRequest
      */
+    profesionalId?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ProfesionalRequest
+     */
     firstName: string;
     /**
      * 
